<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_tree_lines"
    android:paddingTop="@dimen/item_height_padding_top"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/containerMain"
    android:background="?attr/selectableItemBackgroundBorderless"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFoto"
        android:layout_width="@dimen/img_item_size"
        android:layout_height="@dimen/img_item_size"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:src="@drawable/ic_account_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:transitionName="@string/transition_image"
       />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:layout_marginEnd="@dimen/item_padding_horizontal"

        android:hint="@string/artist_hint_nombre"
        android:textAppearance="@style/ItemLarge"
        android:transitionName="@string/transitionName"
        app:layout_constraintEnd_toStartOf="@id/tvOrden"
        app:layout_constraintStart_toEndOf="@id/imgFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tvNote"
        android:transitionName="@string/transitionNote"
        android:hint="@string/artist_hint_notas"
        android:textAppearance="@style/ItemMedium"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/tvNombre"
        app:layout_constraintEnd_toEndOf="@id/tvNombre"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/artist_hint_orden"
        android:transitionName="@string/transition_order"
        android:gravity="center"
        android:textSize="@dimen/item_text_size_secondary"
        android:layout_marginEnd="@dimen/item_padding_horizontal"
        android:layout_margin="@dimen/main_padding_small"
        android:drawableBottom="@drawable/ic_star"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
<com.google.android.material.divider.MaterialDivider
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/tvNombre"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
   />

</androidx.constraintlayout.widget.ConstraintLayout>