<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.alain.cursos.top.DetalleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"


        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/artist_hint_nombre"
            app:collapsedTitleTextAppearance="@style/TextAppearance.MyTypes.Headline6"
            app:contentScrim="@color/collapsing_toolbar_color"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarExpanded">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgCover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:transitionName="@string/transition_image"
                 android:background="@android:color/transparent"
                    android:src="@drawable/ic_photo_size_select_actual"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_marginTop="?attr/actionBarSize">

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/ImageViewButton"
                        android:id="@+id/imgDeleteFoto"
                        android:src="@drawable/ic_close_box"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/ImageViewButton"
                        android:id="@+id/imgFromGallery"
                        android:src="@drawable/ic_image"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/ImageViewButton"
                        android:id="@+id/imgFromUrl"
                        android:src="@drawable/ic_earth_box"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvTitleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_hint_nombre"
                    android:transitionName="@string/transitionName"
                    android:ellipsize="end"
                    android:letterSpacing="0.0"
                    android:textColor="@color/gray_500"
                    android:textAppearance="@style/TextAppearance.MyTypes.Headline5"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="23.5dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@id/imgFoto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:transitionName="@string/transition_image"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_account_box"
                    android:layout_marginBottom="64dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"/>
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                style="?toolbarStyle"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_detalle"
        android:id="@+id/content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_account_edit"
        android:tint="@android:color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
